apps/base/linkding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  resources:
  - deployment.yaml
  - namespace.yaml
