apps/base/linkding/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkding-default-deny
  namespace: linkding
spec:
  podSelector: {}
  policyTypes:
  - Egress
